--- a/allAboutMe.html
+++ b/allAboutMe.html
@@ -11,7 +11,7 @@
 <body>
         <h1><centre>Sophie Martin</centre></h1>
 
-        <h2> Why I like to Code</h2>
+        <h2> Why You like to Code</h2>
             <p>I am fascinated by the language of Coding and its far reaching potential in business and personal use, instantaneous impact.
                 It is a dynamic and creative 
                   </p>
