--- a/allAboutMe.html
+++ b/allAboutMe.html
@@ -9,16 +9,16 @@
 <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="main.css">
 <body>
-        <h1><centre>Sophie Martin</centre></h1>
+      <h1><centre>Sophie Martin</centre></h1>
 
-        <h2> Why You like to Code</h2>
-            <p>I am fascinated by the language of Coding and its far reaching potential in business and personal use, instantaneous impact.
+        <h2> Why I like to Code</h2>
+            <p>I am fascinated by the language of Coding and its far reaching application in business and personal interface, instantaneous impact.
                 It is a dynamic and creative 
                   </p>
     <h3> Future Aspirations</h3>
 <p> I am an aspiring developer and keen to learn the skills and talents of </p>
     <h4> My Background</h4>
-    <p>My background is in media </p>
+    <p>My background is in media.  Including working for the BBC on the BBC Food Website at its start up as an </p>
 
     <h5> Why I joined CodeNation</h5>
 
@@ -26,5 +26,10 @@
     <h6>Background Image</h6>
     <img src="abstract-pixelated-background_1048-7724.jpg"alt="logo">
 
+
+    <button type="button">Profile</button>
+    <button type="button">Employment Experience</button>
+    <button type="button">Background/<button>
+    <button type="button">Qualifications</button>
 </body>
 </html>
