--- a/allAboutMe.html
+++ b/allAboutMe.html
@@ -9,7 +9,19 @@
 <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="main.css">
 <body>
-      <h1><centre>Sophie Martin</centre></h1>
+      
+    <button type="button">Profile</button>
+    <button type="button">Employment Experience</button>
+    <button type="button">Background</button>
+    <button type="button">Qualifications</button> 
+   <br>
+
+    
+   
+   <h1><centre>Sophie Martin</centre></h1>
+
+   
+
 
         <h2> Why I like to Code</h2>
             <p>I am fascinated by the language of Coding and its far reaching application in business and personal interface, instantaneous impact.
@@ -23,13 +35,14 @@
     <h5> Why I joined CodeNation</h5>
 
 <p> Joining codeNation I have opportunity to learn the  gain the </p>
-    <h6>Background Image</h6>
-    <img src="abstract-pixelated-background_1048-7724.jpg"alt="logo">
+   
+
+    <div><img src="abstract-pixelated-background_1048-7724.jpg"></div>
 
 
     <button type="button">Profile</button>
     <button type="button">Employment Experience</button>
-    <button type="button">Background/<button>
+    <button type="button">Background</button>
     <button type="button">Qualifications</button>
 </body>
 </html>
