--- a/allAboutMe.html
+++ b/allAboutMe.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" type="text/css" href="main.css">
 <body>
 
-        <div class="split left">
+        <!-- <div class="split left">
                 <div class="centered">
                   <img src="img_avatar2.png" alt="Avatar woman">
                   <h2>Jane Flex</h2>
@@ -24,7 +24,7 @@
                   <h2>John Doe</h2>
                   <p>Some text here too.</p>
                 </div>
-              </div>
+              </div> -->
 <br>
 
 
@@ -46,7 +46,7 @@ function myFunction() {
 }<button type="button">Profile</button> -->
 <!-- <button class="w3-button w3-medium">Medium</button> -->
 
-<!-- <div>
+<div>
         <button>Submit</button>
       </div>
 
@@ -58,7 +58,7 @@ function myFunction() {
 
     
    
-   <h1><centre>Sophie Martin</centre></h1>
+<h1><centre>Sophie Martin</centre></h1>
 
    
 <br>
@@ -88,4 +88,4 @@ function myFunction() {
       <li><a href="tel:+123456789">Phone</a></li>
     </ul>
 </body>
-</html> -->
+</html>  -->
