--- a/allAboutMe.html
+++ b/allAboutMe.html
@@ -25,7 +25,7 @@
                   <p>Some text here too.</p>
                 </div>
               </div> -->
-<br>
+
 
 
 
@@ -88,4 +88,4 @@ function myFunction() {
       <li><a href="tel:+123456789">Phone</a></li>
     </ul>
 </body>
-</html>  -->
+</html> 
