--- a/index.html
+++ b/index.html
@@ -8,32 +8,12 @@
 </head>
 <body>
   
-    
-    <h1> hello<h1></h1>
 
-    <h2> I'm in england</h1>
-<h3> Im in cambridge</h3>
-<br> 
-    <djlsdkfjslfjsdfjksfjsjfslkvmlmvclcvmlcnlnvnajdladjald></djlsdkfjslfjsdfjksfjsjfslkvmlmvclcvmlcnlnvnajdladjald>
-<br/>
-<br>
-hfskfhkfhskfhksfhjskjfskjf
-    </p>
-    <ul>
-<li>hot choc
-     </li>
-     <li>tea</li>
-     <li>coffee</li> 
 
     
-</body>
-<p> <ahref="https://www.camre.ac.uk"target=_blank">thiswebsite</ahref>a></p>
 
-<img src="p07jbsw9.jpg"alt="logo">
 
-<img src="https://www.camre.ac.uk"target="_blank">
-/a>
-
+<!-- <img src="p07jbsw9.jpg"alt="logo"> -->
 
 
 
