--- a/background.html
+++ b/background.html
@@ -10,25 +10,29 @@
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
-<body>
+<body class="backgroundColor">
     <div> 
         <div>
             <!-- nav buttons -->
+        </div>
+        <div>
+            <!-- image here -->
         </div>
         <div>
             <h1>
                 <!-- title here -->
             </h1>
         </div>
-
-        <p>My background is in media and business administration, 
-         including working as PA/ Assistant Researcher on the BBC Food Website
-          at its exciting start up in Bristol, where I gained experience of working in the dynamic,
-           fast paced coding environment. 
-           <br>
-         The Level 2 course at Cambridge is giving me an excellent grounding in coding,
-         where I am acquiring skills in Javascript, CSS and HTML 
-        </p>  
+        <div>
+            <p>My background is in media and business administration, 
+            including working as PA/ Assistant Researcher on the BBC Food Website
+            at its exciting start up in Bristol, where I gained experience of working in the dynamic,
+            fast paced coding environment. 
+            <br>
+            The Level 2 course at Cambridge is giving me an excellent grounding in coding,
+            where I am acquiring skills in Javascript, CSS and HTML 
+            </p>  
+        </div>
     </div> 
 </body>
 </html>
