--- a/background.html
+++ b/background.html
@@ -31,7 +31,7 @@
             fast paced coding environment. 
             <br>
             The Level 2 course at Cambridge is giving me an excellent grounding in coding,
-            where I am acquiring skills in Javascript, CSS and HTML 
+            where I am acquiring skills in Javascript, CSS and HTML.
             </p>  
         </div>
     </div> 
