--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </div>
           <div>
             <ul>
-            <p>Contact:</p>
+            <!-- <p>Contact:</p>
 
           </ul>
           </div>
@@ -52,10 +52,10 @@
                   <li><a href="tw"></a></li>
                   <li><a href="mailto:m.bluth@example.com">Email</a></li>
                   <li><a href="tel:+123456789">Phone</a></li>
-                </ul>
+                </ul> -->
           </div>
           <div>
-               <h2> Future Aspirations</h2>
+               <h4 class="mainTitle">Future Aspirations</h4>
                
           </div>
           <div>
@@ -65,7 +65,7 @@
           </div>
           <div>
             <ul>
-              <h3>My Background</h3>
+              <h4>My Background</h4>
             </ul>
           </div>
           <div>
